@@ -37,6 +37,9 @@ Next release
   docids; they are iterable and have various methods for obtaining single
   objects (like ``one``, ``first``) and sorting (``sort``).
 
+- Add a ``document_repr`` method to all indexes which accepts a docid and
+  returns a string represnting the index's knowledge about that docid.
+
 0.1a2 (2012-07-02)
 ------------------
 
